[package]
name = "minecloud-node"
version = "0.1.0"
edition = "2024"

[dependencies]
serde               = { version = "1.0.228", features = ["derive"] }
serde_json          = "1.0.145"
tokio               = { version = "1.48.0", features = ["full"] }
async-trait         = "0.1.89"
colored             = "3.0.0"
rand                = "0.10.0-rc.5"
actix-web           = "4.12.0"
actix-cors          = "0.7.1"
sysinfo             = "0.37.2"
chrono              = { version = "0.4.42", features = ["serde"] }
uuid                = { version = "1.18.1", features = ["v4", "serde"] }
bx                  = { git = "https://github.com/ThePhoenixPixel/bx.git", version = "1.2.0"}
mysql               = "27.0.0"


[features]
default             = ["rest-api"]
rest-api            = []
