[package]
name = "minecloud-node"
version = "0.1.0"
edition = "2024"

[dependencies]
serde               = { version = "1.0.228", features = ["derive"] }
serde_json          = "1.0.149"
tokio               = { version = "1.49.0", features = ["full"] }
async-trait         = "0.1.89"
colored             = "3.1.1"
rand                = "0.10.0-rc.8"
actix-web           = "4.12.1"
actix-cors          = "0.7.1"
sysinfo             = "0.38.0"
chrono              = { version = "0.4.43", features = ["serde"] }
uuid                = { version = "1.20.0", features = ["v4", "serde"] }
bx                  = { git = "https://github.com/ThePhoenixPixel/bx.git", version = "1.2.0"}
mysql               = "27.0.0"
once_cell           = "1.21.3"


[features]
default             = ["rest-api"]
rest-api            = []
